--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -29,9 +29,9 @@
 
                         <button ng-click="model.login(model.user);" type="submit" class="btn btn-default btn-md">Login</button>
 
-                        <a href="#" class="forgot-password">Forgot your password?</a>
+                        <!--<a href="#" class="forgot-password">Forgot your password?</a>-->
 
-                        <div class="register-link">Don't have an account? <a href="#/register">Sign up</a>!</div>
+                        <div class="register-link">Don't have an account?  <a href="#/register">Register here</a>!</div>
 
                     </div>
                 </div>
