--- a/public/project/client/views/profile/profile.view.html
+++ b/public/project/client/views/profile/profile.view.html
@@ -1,8 +1,8 @@
 <div ng-controller="ProfileController" class="container-fluid">
-    <!-- {{currentUser}} -->
+
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-5 col-md-offset-2 main">
-            <h1>Personal Information</h1>
+            <h1>Profile</h1>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
@@ -12,62 +12,55 @@
                 <div class="form-group">
                     <label for="" class="col-sm-3 control-label">Username:</label>
                     <div class="col-sm-9">
-                        <input ng-model="currentUser.username" type="text" class="form-control" id="" placeholder="Username">
+                        <input ng-model="model.user.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-3 control-label">Password:</label>
                     <div class="col-sm-9">
-                        <input ng-model="currentUser.password" type="password" class="form-control" id="" placeholder="Password">
+                        <input ng-model="model.user.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-3 control-label">First Name:</label>
                     <div class="col-sm-9">
-                        <input ng-model="currentUser.firstName" type="text" class="form-control" id="" placeholder="First Name">
+                        <input ng-model="model.user.firstName" type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-3 control-label">Last Name:</label>
                     <div class="col-sm-9">
-                        <input ng-model="currentUser.lastName" type="text" class="form-control" id="" placeholder="Last Name">
+                        <input ng-model="model.user.lastName" type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-2">
-                        <button ng-click="update(currentUser)" type="submit" class="btn btn-default btn-md">Update</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <div class="col-sm-9 col-md-4 col-md-offset-1 profile-panel">
-            <form class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-sm-3">Email:</label>
                     <div class="col-sm-9">
-                        <span>{{currentUser.email}}</span>
+                        <input ng-model="model.user.email" type="text" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="" class="col-sm-3">NUID:</label>
+                    <label for="" class="col-sm-3">NU ID:</label>
                     <div class="col-sm-9">
-                        <span>000000000</span>
+                        <input ng-model="model.user.nuid" type="text" class="form-control" id="" placeholder="000000000">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="" class="col-sm-3">Graduation Year:</label>
-                    <div class="col-sm-9">
-                        <span>2018</span>
+
+                    <div class="col-sm-6 pull-right">
+                        or &nbsp;&nbsp;&nbsp;
+                        <button ng-click="model.deleteUser(model.user)" type="submit" class="btn btn-danger btn-md">Delete My Account</button>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-sm-3">Co-op Cycle:</label>
-                    <div class="col-sm-9">
-                        <span>AA</span>
+
+                    <div class="col-sm-3 pull-right">
+                        <button ng-click="model.updateUser(model.user)" type="submit" class="btn btn-success btn-md">Update Profile</button>
                     </div>
+
                 </div>
+
             </form>
+
+
         </div>
     </div>
 </div>
