--- a/public/project/client/views/register/register.view.html
+++ b/public/project/client/views/register/register.view.html
@@ -6,12 +6,30 @@
             <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
 
             <form class="form-horizontal">
-                <!-- <div class="form-group">
+                <div class="form-group">
+                    <label for="" class="col-sm-2 control-label">First Name:</label>
+                    <div class="col-sm-10">
+                        <input ng-model="model.user.firstName" type="text" class="form-control" id="" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-2 control-label">Last Name:</label>
+                    <div class="col-sm-10">
+                        <input ng-model="model.user.lastName" type="text" class="form-control" id="" placeholder="Last Name">
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.email" type="email" class="form-control" id="" placeholder="Email">
+                        <input ng-model="model.user.email" type="email" class="form-control" id="" placeholder="Email">
                     </div>
-                </div> -->
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-2 control-label">NU ID:</label>
+                    <div class="col-sm-10">
+                        <input ng-model="model.user.nuid" type="email" class="form-control" id="" placeholder="000000000">
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
