--- a/public/assignment/client/css/dashboard.css
+++ b/public/assignment/client/css/dashboard.css
@@ -65,7 +65,7 @@ body {
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
     color: #fff;
-    background-color: #ef283f;
+    background-color: #0073ff;
 }
 
 /*
