--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Login</h1>
+            <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
