--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -8,26 +8,28 @@
             </ul>
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
-                <tr>
-                    <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Form Name</th>
-                    <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
-                </tr>
+                    <tr>
+                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Form Name</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td><input ng-model="form.title" type="text" class="form-control" placeholder="Name"></td>
-                    <td>
-                        <a ng-click="addForm(form)"><span class="glyphicon glyphicon-plus"></span></a>
-                        <a ng-click="updateForm(form._id)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
-                    </td>
-                </tr>
-                <tr ng-repeat="form in forms">
-                    <td><a href="#/fields">{{form.title}}</a></td>
-                    <td>
-                        <a ng-click="deleteForm(form._id)"><span class="glyphicon glyphicon-remove"></span></a>
-                        <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <input ng-model="model.form.title" type="text" class="form-control" placeholder="Name">
+                        </td>
+                        <td>
+                            <a ng-click="model.createForm(model.username, model.form)"><span class="glyphicon glyphicon-plus"></span></a>
+                            <a ng-click="model.updateForm(model.form._id)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                        </td>
+                    </tr>
+                    <tr ng-repeat="form in forms">
+                        <td><a href="#/fields">{{form.title}}</a></td>
+                        <td>
+                            <a ng-click="model.deleteForm(model.form._id)"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a ng-click="model.selectForm(model.$index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
