--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -7,18 +7,18 @@
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.username" type="text" class="form-control" id="" placeholder="Username">
+                        <input ng-model="model.user.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.password" type="password" class="form-control" id="" placeholder="Password">
+                        <input ng-model="model.user.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button ng-click="login(user)" type="submit" class="btn btn-default btn-lg">Login</button>
+                        <button ng-click="model.login(model.user)" type="submit" class="btn btn-default btn-lg">Login</button>
                     </div>
                 </div>
             </form>
