fixed profile issues

--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -1,8 +1,10 @@
-<div ng-controller="ProfileController" class="container-fluid">
+<div ng-controller="ProfileController as model" class="container-fluid">
     <!-- {{currentUser}} -->
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Profile</h1>
+
+            {{currentUser}}
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
@@ -12,31 +14,31 @@
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.currentUser.username" type="text" class="form-control" id="" placeholder="Username">
+                        <input ng-model="currentUser.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.currentUser.password" type="password" class="form-control" id="" placeholder="Password">
+                        <input ng-model="currentUser.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">First Name:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.currentUser.firstName" type="text" class="form-control" id="" placeholder="First Name">
+                        <input ng-model="currentUser.firstName" type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Last Name:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.currentUser.lastName" type="text" class="form-control" id="" placeholder="Last Name">
+                        <input ng-model="currentUser.lastName" type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.currentUser.email" type="email" class="form-control" id="" placeholder="Email">
+                        <input ng-model="currentUser.email" type="email" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
 
