--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -27,8 +27,9 @@
                     <tr ng-repeat="form in model.forms">
                         <td><a href="#/fields">{{form.title}}</a></td>
                         <td>
-                            <a ng-click="model.deleteForm(model.form._id)"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a ng-click="model.selectForm(model.$index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a ng-click="model.deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+
+                            <a ng-click="model.selectForm($index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 </tbody>
