--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Forms</h1>
+
+            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#/forms">Forms</a></li>
                 <li role="presentation"><a href="#/fields">Fields</a></li>
@@ -21,7 +24,7 @@
                         <td>
                             <a ng-click="model.addForm(model.form)"><span class="glyphicon glyphicon-plus"></span></a>
 
-                            <a ng-click="model.updateForm(model.form._id)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                            <a ng-click="model.updateForm(model.form)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                     <tr ng-repeat="form in model.forms">
@@ -29,7 +32,7 @@
                         <td>
                             <a ng-click="model.deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
 
-                            <a ng-click="model.selectForm($index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a ng-click="model.selectForm(form)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 </tbody>
