--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -30,7 +30,7 @@
                     <tr ng-repeat="form in model.forms">
                         <td><a href="#/fields">{{form.title}}</a></td>
                         <td>
-                            <a ng-click="model.deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a ng-click="model.deleteForm(form)"><span class="glyphicon glyphicon-remove"></span></a>
 
                             <a ng-click="model.selectForm(form)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                         </td>
