--- a/public/assignment/client/css/assignment-style.css
+++ b/public/assignment/client/css/assignment-style.css
@@ -53,7 +53,7 @@ p {
     letter-spacing: 0.5px;
 }
 .sidebar {
-    top: 40px;
+    top: 30px;
 }
 .nav-tabs>li>a {
     color: #555;
@@ -62,7 +62,7 @@ p {
     color: #0073ff;
 }
 .main {
-    padding: 40px 30px;
+    padding: 15px 30px;
 }
 .admin .main .form-group {
     margin: 0;
@@ -113,7 +113,7 @@ h1 {
 .form-fields .fields-group {
     display: block;
 }
-.form-fields .form-group {
+.form-group {
     display: inline-block;
     width: 65%;
     margin-right: 10px;
@@ -122,7 +122,7 @@ h1 {
     .container-fluid {
         padding: 0 5px;
     }
-    .form-fields .form-group {
+    .form-group {
         margin-right: 3px;
     }
 }
