--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -9,6 +9,8 @@
             </ul>
 
             <form class="form-fields">
+
+                <!-- FIRST NAME -->
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">First Name</label>
@@ -21,6 +23,8 @@
                         <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
+
+                <!-- LAST NAME -->
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">Last Name</label>
@@ -33,6 +37,8 @@
                         <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
+
+                <!-- DATE OF BIRTH -->
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">Date of Birth</label>
@@ -45,6 +51,8 @@
                         <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
                     </div>
                 </div>
+
+                <!-- GENDER -->
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">Gender</label>
@@ -61,16 +69,15 @@
                     </div>
                 </div>
 
-
+                <!-- ROLES -->
                 <label for="">Roles</label>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" value=""> Admin
-                    </label>
+                        <input type="checkbox" value="">Admin</label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" value=""> Student
+                        <input type="checkbox" value="">Student
                     </label>
                 </div>
                 <div class="checkbox">
@@ -80,6 +87,7 @@
                 </div>
 
 
+                <!-- LICENSE AGREEMENT -->
                 <label for="" class="marginTop20">License Agreement</label>
                 <div class="radio">
                     <label>
@@ -92,64 +100,81 @@
                     </label>
                 </div>
 
-                <hr>
 
-                <div class="fields-group">
-                    <div class="form-group">
-                        <label for="newForm" class="marginTop20">Add New Field:</label>
-                        <select class="form-control">
-                            <option>Single Line Text Field</option>
-                            <option>Date Field</option>
-                            <option>Dropdown Field</option>
-                            <option>Checkboxes Field</option>
-                            <option>Radio Buttons Field</option>
-                            <option>Multi Line Text Field</option>
-                        </select>
-                    </div>
-                    <div class="action-links">
-                        <a ng-click="addField(model.fieldType)" href="#"><span class="glyphicon glyphicon-plus"></span></a>
-                    </div>
-                </div>
-                <!--<button type="submit" class="btn btn-default">Submit</button>-->
 
             </form>
+        </div>
+    </div>
 
 
-            <!-- I can't see the actual page right now because of errors so hopefully this is okay until I resolve the errors -->
+
+
+
+
+    <!--- ADD NEW FIELD -->
+
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <hr>
+            <div class="fields-group">
+                <div class="form-group">
+                    <label for="newForm" class="marginTop20">Add New Field:</label>
+                    <select class="form-control" ng-model="model.fieldType">
+                        <option>Single Line Text Field</option>
+                        <option>Date Field</option>
+                        <option>Dropdown Field</option>
+                        <option>Checkboxes Field</option>
+                        <option>Radio Buttons Field</option>
+                        <option>Multi Line Text Field</option>
+                    </select>
+                </div>
+                <div class="action-links">
+                    <a ng-click="addField(model.fieldType)" href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                </div>
+            </div>
 
             <table class="table table-responsive">
-                <tbody ng-model="model.fields" ui-sortable="model.fields">
+                <tbody ui-sortable="model.fields">
+
                     <tr ng-switch="field.type" ng-repeat="field in model.fields">
+
                         <td ng-switch-when="TEXT">
                             <label>{{field.label}}</label>
+
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="{{field.placeholder}}">
                                 <div class="input-group-btn" ng-include="'views/forms/buttons.html'"></div>
                             </div>
                         </td>
+
                         <td ng-switch-when="OPTIONS">
                             <label>{{field.label}}</label>
+
                             <div class="input-group">
                                 <select class="form-control">
-                                    <option ng-repeat="op in field.options">{{op.label}}</option>
+                                    <option ng-repeat="option in field.options">{{option.label}}</option>
                                 </select>
                                 <div class="input-group-btn" ng-include="'views/forms/buttons.html'"></div>
                             </div>
                         </td>
+
                         <td ng-switch-when="TEXTAREA">
                             <label>{{field.label}}</label>
+
                             <div class="input-group">
                                 <textarea class="form-control" placeholder="{{field.placeholder}}"></textarea>
                                 <div class="input-group-btn" ng-include="'views/forms/buttons.html'"></div>
                             </div>
                         </td>
+
                         <td ng-switch-when="CHECKBOXES">
                             <label>{{field.label}}</label>
+
                             <div class="input-group">
                                 <div class="checkbox">
-                                    <div ng-repeat="op in field.options">
+                                    <div ng-repeat="option in field.options">
                                         <label>
-                                            <input type="checkbox" value="{{op.value}}">{{op.label}}
+                                            <input type="checkbox" value="{{option.value}}">{{option.label}}
                                         </label>
                                         <br>
                                     </div>
@@ -160,9 +185,9 @@
                         <td ng-switch-when="RADIOS">
                             <label>{{field.label}}</label>
                             <div class="input-group">
-                                <div ng-repeat="op in field.options" class="radio">
+                                <div ng-repeat="option in field.options" class="radio">
                                     <label>
-                                        <input type="radio" name="{{op.label}}" value="{{op.value}}" checked> {{op.label}}
+                                        <input type="radio" name="{{option.label}}" value="{{option.value}}" checked> {{option.label}}
                                     </label>
                                 </div>
                                 <div class="input-group-btn" ng-include="'views/forms/buttons.html'"></div>
@@ -257,8 +282,164 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+</div>
 
 
+
+
+
+
+
+
+
+
+
+<!-- MODALS -->
+
+<div id="modalTEXT" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editTextLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editTextLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editTextPlaceholder" class="fields-label ">Placeholder: </label>
+                <input type="text" id="editTextPlaceholder" ng-model="placeholder" class="form-control form-fields" placeholder="{{field.placeholder}}">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" ng-click="updateField(field, {label: label, placeholder: placeholder, type:'TEXT'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" ng-click="editComplete()" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalEMAIL" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editEmailLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editEmailLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editEmailPlaceholder" class="fields-label ">Placeholder: </label>
+                <input type="text" id="editEmailPlaceholder" ng-model="placeholder" class="form-control form-fields" placeholder="{{field.placeholder}}">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, placeholder: placeholder, type:'EMAIL'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalOPTIONS" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editOptionsLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editOptionsLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editOptions" class="fields-label ">Options: </label>
+                <textarea id="editOptions" ng-model="options" class="form-control form-fields" placeholder="{{field.options[0].label}};{{field.options[0].value}}"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, options: options, type:'OPTIONS'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" ng-click="editComplete()" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalTEXTAREA" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editTextAreaLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editTextAreaLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editTextAreaPlaceholder" class="fields-label ">Placeholder: </label>
+                <input type="text" id="editTextAreaPlaceholder" ng-model="placeholder" class="form-control form-fields" placeholder="Placeholder">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, placeholder: placeholder, type:'TEXTAREA'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalDATE" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editDateLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editDateLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, type:'DATE'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalCHECKBOXES" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editCheckboxLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editCheckboxLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editChechboxOptions" class="fields-label ">Options: </label>
+                <textarea id="editChechboxOptions" ng-model="options" class="form-control form-fields" placeholder="Label;Value"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, options: options, type:'CHECKBOXES'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalRADIOS" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit {{field.type}}</h4>
+            </div>
+            <div class="modal-body">
+                <label for="editRadioLabel" class="fields-label ">Label: </label>
+                <input type="text" id="editRadioLabel" ng-model="label" class="form-control form-fields" placeholder="{{field.label}}">
+                <label for="editRadioOptions" class="fields-label ">Options: </label>
+                <textarea id="editRadioOptions" ng-model="options" class="form-control form-fields" placeholder="Label;Value"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="updateField(field, {label: label, options: options, type:'RADIOS'})" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
