--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -27,14 +27,19 @@
                             <a ng-click="model.updateForm(model.form)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                         </td>
                     </tr>
+
+
                     <tr ng-repeat="form in model.forms">
-                        <td><a href="#/fields">{{form.title}}</a></td>
+                        <td><a href="#/form/{{form._id}}/fields">{{form.title}}</a></td>
+
                         <td>
                             <a ng-click="model.deleteForm(form)"><span class="glyphicon glyphicon-remove"></span></a>
 
                             <a ng-click="model.selectForm(form)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                         </td>
+
                     </tr>
+
                 </tbody>
             </table>
         </div>
