--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -271,7 +271,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">{{model.eField.label}}</h4>
+                            <h4 class="modal-title">{{model.eField.label}}Field Properties</h4>
                         </div>
                         <div class="modal-body" ng-switch on="model.eField.type">
                             <div ng-switch-when="TEXT">
