--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -13,37 +13,37 @@
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">First Name:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.firstName" type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Last Name:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.lastName" type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Email:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.email" type="email" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-offset-2 col-sm-10 col-md-10">
                         <button ng-click="model.update(currentUser)" type="submit" class="btn btn-default btn-lg">Update</button>
                     </div>
                 </div>
